# dhall-json

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  default.nix  dhall-json.cabal  release.nix  shell.nix  stack-lts-11.yaml  stack.yaml
.github/: CONTRIBUTING.md
dhall-to-json/: Main.hs
dhall-to-yaml/: Main.hs
exec/: Main.hs
nix/: dhall-json.nix  dhall.nix  prettyprinter.nix
src/Dhall/: JSON.hs
tasty/: Main.hs
