Name: dhall-json
Version: 1.0.9
Cabal-Version: >=1.8.0.2
Build-Type: Simple
Tested-With: GHC == 7.10.2, GHC == 8.0.1
License: BSD3
License-File: LICENSE
Copyright: 2017 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Dhall-JSON-Library/issues
Synopsis: Compile Dhall to JSON or YAML
Description:
    Use this package if you want to compile Dhall expressions to JSON or YAML.
    You can use this package as a library or an executable:
    .
    * See the "Dhall.JSON" module if you want to use this package as a library
    .
    * Use the @dhall-to-json@ or @dhall-to-yaml@ programs from this package if
      you want an executable
    .
    The "Dhall.JSON" module also contains instructions for how to use this
    package
Category: Compiler
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Dhall-JSON-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base   >= 4.8.0.0  && < 5  ,
        aeson  >= 1.0.0.0  && < 1.3,
        dhall  >= 1.0.1    && < 1.9,
        text   >= 0.11.1.0 && < 1.3,
        vector
    Exposed-Modules: Dhall.JSON
    GHC-Options: -Wall

Executable dhall-to-json
    Hs-Source-Dirs: dhall-to-json
    Main-Is: Main.hs
    Build-Depends:
        base                                  ,
        aeson                                 ,
        aeson-pretty                    < 0.9 ,
        bytestring                      < 0.11,
        dhall                                 ,
        dhall-json                            ,
        optparse-generic >= 1.1.1    && < 1.3 ,
        trifecta         >= 1.6      && < 1.8 ,
        text
    GHC-Options: -Wall

Executable dhall-to-yaml
    Hs-Source-Dirs: dhall-to-yaml
    Main-Is: Main.hs
    Build-Depends:
        base                                  ,
        bytestring                      < 0.11,
        dhall                                 ,
        dhall-json                            ,
        optparse-generic >= 1.1.1    && < 1.3 ,
        trifecta         >= 1.6      && < 1.8 ,
        yaml             >= 0.5.0    && < 0.9 ,
        text
    GHC-Options: -Wall
